# Volta

./: .asan-suppressions  .clang-tidy  .gitignore  CHANGELOG.md  FEATURES.md  IR_VALUE_LEARNING_GUIDE.md  IR_VALUE_QUICK_REF.md  LLVM_MIGRATION_PLAN.md  Language_spec.md  Makefile  README.md  RELEASE_GUIDE.md  RELEASE_QUICK_REFERENCE.md  RELEASE_SUMMARY.md  dune-project  mkdocs.yml  output.file  test.output  test.volta  test_array.volta  test_array_debug.volta  test_array_modify_param.volta  test_bubble.volta  test_bubble_full.volta  test_disasm.cpp  test_factorial.volta  test_for_ir.volta  test_nested_for.volta  test_simple_for.volta  test_simple_modify.volta  test_struct_param.volta  test_struct_simple.volta
_build/: .db  .digest-db  log
volta/: dune-project
volta/_build/: .db  .digest-db  log
volta/_build/default/: volta.dune-package  volta.install  volta.opam
volta/_build/default/.dune/: configurator
volta/_build/default/lib/: volta.cma  volta.cmxa  volta.cmxs  volta.ml-gen
volta/_build/default/lib/.merlin-conf/: lib-volta
volta/_build/default/lib/.volta.objs/: volta__Lexer.impl.all-deps
volta/_build/default/lib/.volta.objs/byte/: volta.cmi  volta.cmo  volta.cmt  volta__Lexer.cmi  volta__Lexer.cmo  volta__Lexer.cmt  volta__Token_type.cmi  volta__Token_type.cmo  volta__Token_type.cmt
volta/_build/default/lib/lexer/: lexer.ml  token_type.ml
volta/_build/default/test/: oUnit-Volta Lexer Test Suite.cache
volta/_build/default/test/.merlin-conf/: exe-test_lexer
volta/lib/: dune
volta/lib/lexer/: token_type.ml
volta/test/: dune  test_lexer.ml
(+445 files in other folders)
